--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="hello2">HELLO WORLD</string>
     <string name="sparta">THIS IS SPARTA</string>
+    <string name="testi">heeeellooo</string>
 
 </resources>
